# meta-mesh

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
infrastructure/materializer/properties/: PostgreSQL.properties
