[tool.poetry]
name = "meta-mesh"
version = "0.1.0"
description = ""
authors = ["prb270913 <pauloboff.mtm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rdflib="^7.0.0"
boto3="^1.34.68"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
